--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-<head th:replace="fragments/config :: configFragment"></head>
+<html lang="ko"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<head>
+    <meta charset="UTF-8" />
+    <!-- 공통으로 쓰이는 css파일을 넣는다.-->
+    <!--  <link rel="stylesheet" th:href="@{css/bootstrap.min.css}">-->
+    <!-- 공통으로 쓰이는 js 파일을 넣는다.-->
+    <script th:src="@{js/jquery-3.6.0.min.js}"></script>
+</head>
+<body>
+    <!-- header 시작 -->
+    <header th:replace="fragments/header :: headerFragment"></header>
+    <!-- header 끝 -->
+    <!-- content 시작 -->
+    <div layout:fragment="content"></div>
+    <!-- content 끝 -->
+    <!-- footer 시작 -->
+    <footer th:replace="fragments/footer :: footerFragment"></footer>
+    <!-- footer 끝 -->
+</body>
 
-<header th:replace="fragments/header :: headerFragment"></header>
-
-<div layout:fragment="content"></div>
-
-<footer th:replace="fragments/footer :: footerFragment"></footer>
 </html>
