w3 school css 적용

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,19 +3,10 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{layouts/layout}">
 
-<head>
-<script>
-	$(document).ready(function() {
-		$("p").click(function() {
-			$(this).hide();
-		});
-	});
-</script>
-</head>
 
 
 <div layout:fragment="content">
-	<div style="border: 1px solid red">index.html</div>
+	<div class="w3-blue">index.html</div>
 
 </div>
 </html>
