로직설계(별도파일), 관련페이지 생성 및 컨트롤러 연결

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,7 +6,18 @@
 
 
 <div layout:fragment="content">
-	<div class="w3-blue">index.html</div>
+	<div class="w3-blue">
+			<a class="w3-button" href="/customer/main">고객 메인페이지</a>
+			<br>
+			<a class="w3-button" href="/customer/status">요청 후 고객현황</a>
+	</div>
+	<div class="w3-red">
+			<a class="w3-button" href="/owner/main">요청받은 사장 메인페이지</a>
+			<br>
+			<a class="w3-button" href="/owner/history">쿠폰 최근사용내역</a>
+			<br>
+			<a class="w3-button" href="/owner/admin">회원관리</a>
+	</div>
 
 </div>
 </html>
