--- a/src/main/resources/templates/layouts/layout.html
+++ b/src/main/resources/templates/layouts/layout.html
@@ -4,8 +4,9 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" th:href="@{css/w3.css}">
-    <script th:src="@{js/jquery-3.6.0.min.js}"></script>
+    <link rel="stylesheet" th:href="@{/css/w3.css}">
+    <script th:src="@{/js/jquery-3.6.0.min.js}"></script>
+    <title>Project</title>
 </head>
 <body>
     <header th:replace="fragments/header :: headerFragment"></header>
