--- a/src/main/resources/templates/owner/history.html
+++ b/src/main/resources/templates/owner/history.html
@@ -1,8 +1,10 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorate="@{/layouts/layout}">
 
 <body>
-	<div class="container">
+	<div layout:fragment="content">
 	history
 	</div> <!-- /container -->
 </body>
