--- a/src/main/resources/templates/customer/status.html
+++ b/src/main/resources/templates/customer/status.html
@@ -5,8 +5,29 @@
 
 <body>
 	<div layout:fragment="content">
-	status
-	</div> <!-- /container -->
+		<!-- 페이지 상단 -->
+		<div class="w3-display-topleft w3-padding w3-hide-small">
+			<font>010-1234-1234 님</font>
+			<i class="fa fa-refresh w3-button"></i>
+		</div>
+		<!-- 페이지 상단 end -->
+
+		<!-- 페이지 중단 -->
+		<div class="w3-display-middle w3-padding">
+			<label class="w3-label">현재 스탬프: </label>
+			<font>0</font>
+			<br> <label class="w3-label">현재 쿠폰: </label>
+			<font>0</font>
+			<button class="w3-button w3-blue">사용하기</button>
+
+		<div class="w3-padding w3-hide-small">
+			<button class="w3-button w3-red">뒤로가기</button>
+		</div>
+		</div>
+		<!-- 페이지 중단 end -->
+
+	</div>
+	<!-- /container -->
 </body>
 
 </html>
