--- a/src/main/resources/templates/customer/main.html
+++ b/src/main/resources/templates/customer/main.html
@@ -6,15 +6,11 @@
 <body>
 	<div layout:fragment="content">
 
-	<!-- 페이지 상단 -->
-		<div class="w3-display-topmiddle w3-padding w3-hide-small">
-			<button class="w3-button w3-round-xxlarge w3-blue">적립내역 보기</button>
-		</div>
-		<!-- 페이지 상단 end -->
-
 		<!-- 페이지 중단 -->
 		<div class="w3-display-middle w3-padding">
-
+			<div class="w3-margin w3-center">
+				<button class="w3-button w3-round-xxlarge w3-blue">적립내역 보기</button>
+			</div>
 
 			<h5>휴대폰 번호 입력:</h5>
 			<div class="w3-padding">
