--- a/src/main/resources/templates/customer/status.html
+++ b/src/main/resources/templates/customer/status.html
@@ -5,22 +5,19 @@
 
 <body>
 	<div layout:fragment="content">
-		<!-- 페이지 상단 -->
-		<div class="w3-display-topleft w3-padding w3-hide-small">
-			<font>010-1234-1234 님</font>
-			<i class="fa fa-refresh w3-button"></i>
-		</div>
-		<!-- 페이지 상단 end -->
-
 		<!-- 페이지 중단 -->
 		<div class="w3-display-middle w3-padding">
+			<div class="w3-margin">
+				<font size="4">010-1234-1234 님</font>
+				<i class="fa fa-refresh w3-button"></i>
+			</div>
 			<label class="w3-label">현재 스탬프: </label>
 			<font>0</font>
 			<br> <label class="w3-label">현재 쿠폰: </label>
-			<font>0</font>
+			<font>0</font><br>
 			<button class="w3-button w3-blue">사용하기</button>
 
-		<div class="w3-padding w3-hide-small">
+		<div class="w3-padding w3-margin w3-hide-small w3-center">
 			<button class="w3-button w3-red">뒤로가기</button>
 		</div>
 		</div>
