--- a/src/main/resources/templates/owner/main.html
+++ b/src/main/resources/templates/owner/main.html
@@ -5,8 +5,23 @@
 
 <body>
 	<div layout:fragment="content">
-	 owner mainForm
-	</div> <!-- /container -->
+		<!-- 페이지 중단 -->
+		<div class="w3-display-middle w3-padding">
+			<div class="w3-contatner w3-border w3-padding">
+				<font size="5">010-1234-1234</font>
+			</div>
+			<div class="w3-margin">
+				<i class="fa fa-arrow-left w3-button"></i> <input
+					class="w3-input w3-border w3-center"
+					style="width: 100px; display: inline;" type="text" placeholder="0">
+				<i class="fa fa-arrow-right w3-button"></i>
+			</div>
+			<div class="w3-center">
+				<button class="w3-button w3-blue">확인</button>
+			</div>
+		</div>
+		<!-- 페이지 중단 end -->
+	</div>
 </body>
 
 </html>
