--- a/src/main/resources/templates/owner/history.html
+++ b/src/main/resources/templates/owner/history.html
@@ -5,8 +5,42 @@
 
 <body>
 	<div layout:fragment="content">
-	history
-	</div> <!-- /container -->
+     <!-- 페이지 중단 -->
+     <div class="w3-display-middle w3-padding">
+        <div class="w3-contatner w3-border w3-border-black w3-padding w3-center">
+            <font size="5">쿠폰 최근내역</font>
+        </div>
+        <div class="w3-contatner w3-padding w3-center">
+            <input class="w3-input w3-border" style="width:350px;display: inline;" placeholder="010-1234-1234"> 
+            <button class="w3-button w3-blue">검색</button>
+        </div>
+        <div class="w3-margin">
+            <table class="w3-table w3-border">
+                <tr>
+                    <td>최근 방문일</td>
+                    <td>고객번호</td>
+                    <td>구분</td>
+                    <td>적립 도장수</td>
+                    <td>상세보기</td>
+                </tr>
+                <tr>
+                    <td>2022-01-01</td>
+                    <td>010-1234-1234</td>
+                    <td>적립</td>
+                    <td>2</td>
+                    <td><i class="fa fa-search w3-button"></i></td>
+                </tr>
+
+            </table>
+            
+        </div>
+        <div class="w3-center">
+            <button class="w3-button w3-red">뒤로가기</button>
+        </div>
+    </div>
+    <!-- 페이지 중단 end -->
+
+	</div> 
 </body>
 
 </html>
